force-app/src/objects/ffbf__BankFormatTool__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Bank Format Tool</description>
    <fields>
        <fullName>ffbf__CIBC2_File_Creation_Number__c</fullName>
        <label>CIBC2 File Creation Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DateofCreation__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbf__DatetoArrive__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date to Arrive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbf__DescriptionOfEntries__c</fullName>
        <defaultValue>&quot;PAYROLL&quot;</defaultValue>
        <label>Description of Entries</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__Indicator__c</fullName>
        <label>Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__LodgementReference__c</fullName>
        <label>Lodgement Reference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__StoreBankFilesInDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected the Bank Files generated are stored in Documents and can only be viewed using Classic. If deselected the Bank Files generated are stored in Files and can be viewed using both Classic and Lightning. The default is deselected.</description>
        <label>Store Bank Files in Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__TraceRecord__c</fullName>
        <label>Trace Record</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__TransactionCodeDebit__c</fullName>
        <label>Transaction Code Debit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__TransactionCode__c</fullName>
        <label>Transaction Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__Transaction_Code_3__c</fullName>
        <label>Transaction Code 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Format Tool</label>
</CustomObject>